# unity-csharp-client-generated/src/IO.Swagger/Model/HttpError.cs
@@ -1,0 +1,18 @@
+using Hacky.rest.services;
+using UnityEngine;
+using System;
+namespace Hacky.rest.models {
+
+    [Serializable]
+    public class HttpError   { 
+        
+        public int? Code;
+        public string Message;
+       
+    }
+
+
+
+
+
+}
